--- a/index.html
+++ b/index.html
@@ -61,76 +61,77 @@
         <div class="home-shape-small"></div>
         <div class="home-shape-big1"></div>
         <div class="home-shape-big2"></div>
-        <img src="assets/img/shape-bg.png" alt="" class="home-shape-bg">
+        <img src="assets/img/shape-bg.png" alt="" class="home-shape-bg" />
+
         <div class="home-container container">
           <div class="home-info">
-            <h1 class="home-title"><span>Discover </span>Collect AND Sell NFTS.</h1>
+            <h1 class="home-title">
+              <span>Discover </span><br>Collect and <br> Sell NFTS.
+            </h1>
             <p class="home-description">
               Explore on the world best largest NFT marketplace.
             </p>
 
             <a href="#" class="home-button">EXPLORE</a>
           </div>
-        </div>
 
-        <div class="home-group">
-          <div class="home-imgs">
-            <div class="home-img-eth">
-              <img src="assets/img/ethereum-img.png" alt="ETH IMG" />
+          <div class="home-group">
+            <div class="home-imgs">
+              <div class="home-img-eth">
+                <img src="assets/img/ethereum-img.png" alt="ETH IMG" />
+              </div>
+              <div class="home-img-orb">
+                <img src="assets/img/orbe-img.png" alt="ORB IMG" />
+              </div>
             </div>
-            <div class="home-img-orb">
-              <img src="assets/img/orbe-img.png" alt="ORB IMG" />
+
+            <div class="home-data">
+              <div>
+                <h2 class="home-data-number">1.4k+</h2>
+                <p class="home-data-subtitle">Artworks</p>
+              </div>
+              <div>
+                <h2 class="home-data-number">400+</h2>
+                <p class="home-data-subtitle">Artists</p>
+              </div>
+              <div>
+                <h2 class="home-data-number">1.4k+</h2>
+                <p class="home-data-subtitle">Auctions</p>
+              </div>
             </div>
           </div>
-
-          <div class="home-data">
+          <div class="home-footer">
             <div>
-              <h2 class="home-data-number">1.4k+</h2>
-              <p class="home-data-subtitle">Artworks</p>
-            </div>
-            <div>
-              <h2 class="home-data-number">400+</h2>
-              <p class="home-data-subtitle">Artists</p>
-            </div>
-            <div>
-              <h2 class="home-data-number">1.4k+</h2>
-              <p class="home-data-subtitle">Auctions</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="home-footer">
-            <div>
-                <span class="home-footer-title">Current Bids</span>
-                <span class="home-footer-number">1.23 ETH</span>
-                <div class="home-footer-subtitle">$8046.86</div>
+              <span class="home-footer-title">Current Bids</span>
+              <span class="home-footer-number">1.23 ETH</span>
+              <div class="home-footer-subtitle">$8046.86</div>
             </div>
 
             <div>
-                <span class="home-footer-title">Auction ending in</span>
+              <span class="home-footer-title">Auction ending in</span>
 
-                <div class="home-footer-time">
-                    <div class="home-footer-counter">
-                        <h3 class="home-footer-number">06</h3>
-                        <span class="home-footer-subtitle">hours</span>
-                    </div>
-
-                    <div class="home-footer-counter">
-                        <h3 class="home-footer-number">26</h3>
-                        <span class="home-footer-subtitle">minutes</span>
-                    </div>
-
-                    <div class="home-footer-counter">
-                        <h3 class="home-footer-number">50</h3>
-                        <span class="home-footer-subtitle">seconds</span>
-                    </div>
+              <div class="home-footer-time">
+                <div class="home-footer-counter">
+                  <h3 class="home-footer-number">06</h3>
+                  <span class="home-footer-subtitle">hours</span>
                 </div>
-                
+
+                <div class="home-footer-counter">
+                  <h3 class="home-footer-number">26</h3>
+                  <span class="home-footer-subtitle">minutes</span>
+                </div>
+
+                <div class="home-footer-counter">
+                  <h3 class="home-footer-number">50</h3>
+                  <span class="home-footer-subtitle">seconds</span>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
       </section>
     </main>
-
+    <script src="assets/js/scrollreveal.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
